# cbspec

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: default_config.yaml
src/cbspec/: __init__.py  binning.py  cli.py  config.py  constants.py  data_classes.py  en_bins.py  exposure.py  feldman_cousins.py  flux.py  get_data.py  load_config.py  logging_utils.py  main.py  output_utils.py  plotting.py  process_data.py  spectrum.py
