[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbspec"
version = "0.1.0"
description = "A project for analyzing CB spectrum data"
authors = [
    { name = "Robert D'Avignon", email = "rjdavignon@outlook.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["data", "analysis", "spectrum", "cb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "awkward",
    "pyarrow",
    "pandas",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cbspec-main = "cbspec.main:main"
