[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbspec"
version = "0.1.0"
description = "A project for converting TASD/CBSD detector data into a UHECR spectrum"
authors = [
    { name = "Robert D'Avignon", email = "rjdavignon@outlook.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["data", "analysis", "spectrum", "cb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "awkward",
    "pyarrow",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cbspec = "cbspec.main:main"
